@@ -103,7 +103,7 @@ public class RotTrlTransform3d {
     }
 
     public List<Translation3d> applyTrls(List<Translation3d> trls) {
-        return trls.stream().map(this::apply).collect(Collectors.toList());
+        return trls.stream().map(this::apply).toList();
     }
 
     public Rotation3d apply(Rotation3d rot) {
@@ -111,7 +111,7 @@ public class RotTrlTransform3d {
     }
 
     public List<Rotation3d> applyRots(List<Rotation3d> rots) {
-        return rots.stream().map(this::apply).collect(Collectors.toList());
+        return rots.stream().map(this::apply).toList();
     }
 
     public Pose3d apply(Pose3d pose) {
@@ -119,6 +119,6 @@ public class RotTrlTransform3d {
     }
 
     public List<Pose3d> applyPoses(List<Pose3d> poses) {
-        return poses.stream().map(this::apply).collect(Collectors.toList());
+        return poses.stream().map(this::apply).toList();
     }
 }
